--- a/CaseStudy_Titanic.ipynb
+++ b/CaseStudy_Titanic.ipynb
@@ -785,7 +785,7 @@
     "    .plot.bar(xlabel = \"Sex\", ylabel = \"Count\", title = \"Sex Count\", rot = 0)\n",
     ")\n",
     "\n",
-    "# Add data points to corresponding bars\n",
+    "# Add data points to corresponding bars and group by\n",
     "for i, v in enumerate(titanic_df.groupby(by = \"Sex\")[\"Sex\"].count()):\n",
     "    plt.text(i, v+5, str(v), ha = \"center\", weight = 20)\n",
     "\n",
