hey man, how're you

--- a/CaseStudy_Titanic.ipynb
+++ b/CaseStudy_Titanic.ipynb
@@ -659,7 +659,7 @@
     }
    ],
    "source": [
-    "titanic_df.describe()"
+    "titanic_df.describe()\n"
    ]
   },
   {
@@ -777,7 +777,7 @@
     }
    ],
    "source": [
-    "# Create a bar chart\n",
+    "# Create a bar chart to represent number of males andfemale passengers\n",
     "(\n",
     "    titanic_df\n",
     "    .groupby(by = \"Sex\")\n",
